<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_5"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_10">

            <ImageView
                    android:id="@+id/btn_todo_complete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_check"
                    android:contentDescription="@string/description_ic_mark_as_complete"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                    android:id="@+id/tv_todo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_5"
                    tools:text="Start working in the new task"
                    android:textSize="@dimen/todo_title"
                    android:textColor="@android:color/black"
                    app:layout_constraintStart_toEndOf="@+id/btn_todo_complete"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn_edit"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                    android:id="@+id/btn_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/space_5"
                    android:paddingEnd="@dimen/space_5"
                    app:srcCompat="@drawable/ic_edit"
                    android:tint="@color/colorPrimary"
                    android:contentDescription="@string/description_ic_edit"
                    app:layout_constraintStart_toEndOf="@+id/tv_todo"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn_delete"
                    app:layout_constraintBottom_toBottomOf="parent"/>
        <ImageView
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/space_5"
                android:paddingEnd="@dimen/no_space"
                app:srcCompat="@drawable/ic_delete"
                android:tint="@android:color/holo_red_light"
                android:contentDescription="@string/description_ic_delete"
                app:layout_constraintStart_toEndOf="@+id/btn_edit"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>